# temporal-clue

./: LICENSE  README.md  example.ipynb  pyproject.toml
game/: cp.ipynb  game.py  solver.py
puzzles/: test.json  val.json
temporal_clue/: __init__.py  clue.py  data_classes.py  model.py  puzzle.py  scenario.py  types.py  utils.py
temporal_clue/tests/: test_game_solver.py  test_puzzle_snapshot.py
temporal_clue/tests/snapshots/test_puzzle_snapshot/test_puzzle_creation_snapshot/: puzzle_snapshot.json
